# pjwebrtc-android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/experty/pjwebrtctest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PeerConnection.cpp  PeerConnection.h  global.cpp  pjwebrtc.cpp
app/src/main/cpp/lib/json/: json.hpp
app/src/main/cpp/lib/wsxx/: .gitignore  CMakeLists.txt  README.md
app/src/main/cpp/lib/wsxx/include/: WebSocket.h  concurrentqueue.h
app/src/main/cpp/lib/wsxx/src/: WebSocket.html5.cpp  WebSocket.posix.cpp
app/src/main/java/io/experty/pjwebrtc/: PeerConnection.java  PjWebRTC.java  ResultCallback.java  UserMedia.java
app/src/main/java/io/experty/pjwebrtctest/: MainActivity.java  Observable.java  ObservableList.java  ObservableValue.java  Observer.java  ReactiveConnection.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/experty/pjwebrtctest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
